Fix(responsive): 14px font-size on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,3 +24,9 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
